# prognosis

./: project_files.txt  project_tree.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/config/: __init__.py  loader.py  schema.py
backend/app/core/: config.py  logging.py
backend/app/data_generation/: confusion_matrix.py  datasets.py  divergence.py  metrics_writer.py  model.py  persistence.py  run_experiment.py  seeding.py  summary.py  trainer.py  training_logger.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/eval/: __init__.py  retrieval_eval.py
backend/app/llm/: __init__.py  client.py  models.py  prompts.py  structured_output.py
backend/app/models/: __init__.py  base.py  experiment.py  metric.py  run.py
backend/app/rag/: __init__.py  chunker.py  embed.py  (+3 more)
backend/scripts/: generate_experiment_plan.py  run_experiments.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_state.py  test_analyze_metrics_node.py  test_chunker.py  test_divergence.py  test_experiment_tool.py  test_experiments_api.py  test_finalize_node.py  test_generate_hypotheses_node.py  test_health.py  test_ingest.py  test_llm_client.py  test_llm_models.py  test_llm_prompts.py  test_llm_structured_output.py  test_metrics_analysis.py  test_metrics_tool.py  test_metrics_writer.py  test_persistence.py  test_plan_experiments_node.py  test_retrieval_eval.py  test_retrieval_tool.py  test_retrieve_context_node.py  test_retriever.py  test_router_node.py  test_self_check_node.py  test_summary.py
(+57 files in other folders)
