[project]
name = "ml-experiment-agent"
version = "0.1.0"
description = "AI experiment diagnosis and decision support system for ML engineers"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
# Added when the LangGraph orchestration layer is implemented.
agent = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.39.0",
]
# Added when the RAG pipeline is implemented.
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.2.0",
]
# Added when the experiment data generation / training scripts are implemented.
ml = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["torch.*", "torchvision.*", "matplotlib.*", "chromadb.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"